BUG 10484: Change Picture clipping & sizing Make img max-height/width:100% so the image resizes with the container. This allows us to get rid of overflow:hidden so close icon appears in editor.
QA: Make sure bug is fixed. Image will now fit the size of the container.

--- a/app/styles/components.sass
+++ b/app/styles/components.sass
@@ -188,7 +188,9 @@ body.socrata-page
     list-style-position: inside
 
 .component-Picture
-  overflow: hidden
+  img
+    max-height: 100%
+    max-width: 100%
 
 .component-Property
   font-size: 1.2em
